--- a/Innovation Cloud/index.html
+++ b/Innovation Cloud/index.html
@@ -22,9 +22,27 @@
   		</div>
   		<div class="info">
   			<div class="container">
-  			
+  				<img id = "cloud-img" src = "https://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/cloud.svg">
+  				<h1>The Innovation Cloud Conference</h1>
+  				<p>Connect with the best minds across a wide range of industries to share ideas and brainstorm new solutions to challenging problems.</p>
+
+				<p>Hear industry leaders talk about what worked (and what didn't) so that you can save time on your most challenging projects.</p>
+
+				<p>Learn about the latest research and technologies that you can use immediately to invent the future.</p>
   			</div>
   		</div>
+		</div>
+		<div class = "bot-div">
+			<div class="container">
+				<h1>Stay Connected</h1>
+				<p> Receive weekly insights from industry insiders</p>
+				<a href = "#" class = "btn">Join</a>
+			</div>
+		</div>
+		<div class = "mark">
+			<div class = "container">
+				<p>Innovation Cloud Conference</p>
+			</div>
 		</div>
 	</body>
 </html>
